# MLR_working_party

./: .gitignore  README.md  pyproject.toml
01_data/: data_origframework_nofills_nosttl.csv
02_code/: GRU Framework_orig.ipynb  GRU_framework_NJC.ipynb  GRU_triangular_multioutput.ipynb
02_code/configs/: GRU_triangular_config.yaml
02_code/utils/: data_engineering.py  neural_networks.py  tensorboard.py
