[project]
name = "mlr-working-party"
version = "0.1.0"
description = "Machine learning in reserving"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "chainladder==0.8.26",
    "ipykernel>=7.2.0",
    "matplotlib==3.10.8",
    "numpy==2.3.3",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "pip>=26.0.1",
    "plotly==6.5.2",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "shap==0.50.0",
    "tensorboard==2.20.0",
    "tensorflow==2.20.0",
    "torch==2.10.0",
]
